# transition-simulator

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
server/: Dockerfile  pyproject.toml
server/app/: __main__.py  main.py
server/app/core/: clock.py  config.py  errors.py  text.py
server/app/repositories/: meta.py  players.py  profiles.py  seasons.py  store.py  transitions.py
server/app/schemas/: destinations.py  errors.py  health.py  percentiles.py  players.py  simulations.py
server/app/services/: comps.py  constants.py  destinations.py  narrative.py  percentiles.py  players.py  simulation.py  valuation.py
server/data/manual/: elo_manual_fixes.csv
server/data/processed/: club_seasons.parquet  elo_mapping.parquet  league_seasons.parquet  meta.json  player_values.parquet  players.parquet  profile_stats.parquet  transitions.parquet
server/pipeline/: __init__.py  build.py  config.py  gates.py  io.py  naming.py  report.py
server/pipeline/eval/: __init__.py  __main__.py  availability.py  baselines.py  candidates.py  contexts.py  metrics.py  records.py  report.py  runner.py  (+5 more)
server/scripts/: download_data.py  explore.py
server/tests/: api_factories.py  eval_factories.py  factories.py  test_api_destinations.py  test_api_percentiles.py  test_api_players.py  test_api_search.py  test_api_simulations.py  test_comps.py  test_config.py  test_errors.py  test_eval_availability.py  test_eval_baselines.py  test_eval_contexts.py  test_eval_metrics.py  test_eval_records.py  test_eval_runner.py  test_eval_scorer.py  test_eval_search.py  test_eval_thresholds.py  test_health.py  test_narrative.py  test_pipeline_build.py  test_pipeline_elo.py  test_pipeline_gates.py  test_pipeline_leagues.py  test_pipeline_loans.py  test_pipeline_minutes.py  test_pipeline_naming.py  test_pipeline_players.py  test_pipeline_profile.py  test_pipeline_squads.py  test_pipeline_transitions.py  test_pipeline_windows.py  test_seasons.py  test_store.py  test_valuation.py
(+112 files in other folders)
