[project]
name = "precedent-server"
version = "0.1.0"
description = "Precedent API - transfer valuations backed by named precedent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "polars>=1.20",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv]
# The test suite exercises the numpy tuning layer, so eval syncs by default.
default-groups = ["dev", "eval"]

[tool.uv.build-backend]
module-name = ["app", "pipeline"]
module-root = ""

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.mypy]
strict = true
packages = ["app", "pipeline"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "lightgbm.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
data = [
    "kagglehub>=0.3",
]
eval = [
    "lightgbm>=4.6",
    "numpy>=2.1",
]
